# joule

./: .clocignore  .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  .gitlab-ci.yml  API_demo.ipynb  Dockerfile  LICENSE  MANIFEST.in  README  README.rst  compile_incremental_coverage.sh  docker-compose.yml  e2e_runner.sh  install-postgresql.sh  install.sh  notes.txt  postgresql-bootstrap.sql  project.toml  pylintrc  pyproject.toml  python35-compat.patch  requirements.txt  run_cloc.sh  run_local_jouled_server.sh  sample.env  setup.cfg  setup.py  setup.py.bak  sonar-project.properties  sonar_scan.sh  streams.json  unittest.cfg  versioneer.py
.github/workflows/: docker-image.yml  main.yml  pypi.yml
configs/: users.conf
docker/: Dockerfile  README.md  development.dockerfile  main.template.conf  nginx-joule.conf  nginx.conf  runner.sh  user.template.conf
docker/nginx_scripts/: 15-local-resolvers.envsh  20-envsubst-on-templates.sh  (+1 more)
docs/: Makefile  api_reference.rst  cli.rst  composite_modules.rst  concepts.rst  conf.py  events.rst  filter_modules.rst  getting_started.rst  index.rst  install.rst  installation.rst  integration_testing.rst  interfaces.rst  make.bat  module_docs.rst  modules.rst  nilm.rst  nilmdb.rst  pipes.rst  prompt  quick_start.rst  reader_modules.rst  reference.rst  streams.rst  testing_modules.rst  unit_testing.rst  using_joule.rst  writing_modules.rst
docserver/: .angular-cli.json  README.md  deploy_me.sh  package.json
import_logs/: diff_imports.py  test_import.py
joule/: __init__.py  _version.py  cli.py  daemon.py  defaults.py  errors.py  main.py  middleware.py  update_users.py  utilities.py
joule/api/: data.py  (+16 more)
test/: context.py  helpers.py  test_main.py  util.py
tests/: Makefile  helpers.py  test_main.py  test_update_users.py  test_utilities.py
(+965 files in other folders)
